--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,6 +2,7 @@
   <%= f.input :first_name %>
   <%= f.input :last_name %>
   <%= f.input :email, required: true %>
+  <%= f.input :address %>
   <%= f.input :password, label_html: {id: "catpants"} %>
   <%= f.input :password_confirmation %>
   <%= f.submit "Sign Up" %>
