--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -1,40 +1,42 @@
-<div class="col-md-8">
-  <h1><%= @campaign.title %></h1>
-  <p><%= @campaign.body %></p>
-  <p><%= @campaign.goal %></p>
-  <p><%= @campaign.end_date %></p>
+<%= cache [:show, @campaign], expires_in: 1.day do%>
+  <div class="col-md-8">
+    <h1><%= @campaign.title %></h1>
+    <p><%= @campaign.body %></p>
+    <p><%= @campaign.goal %></p>
+    <p><%= @campaign.end_date %></p>
 
-  <div>
-    <div id="map" style='height: 400px;'></div>
+    <div>
+      <div id="map" style='height: 400px;'></div>
+    </div>
+
+    <%= @campaign.publish_button %>
+    <%= link_to "Pledge", new_campaign_pledge_path(@campaign), class: "btn btn-primary" %>
+  </div>
+  <div class="col-md-4">
+    <% @campaign.rewards.each do |rew| %>
+      <div class="panel panel-default">
+        <div class="panel-heading"><%= number_to_currency(rew.amount) %></div>
+        <div class="panel-body">
+          <%= rew.description %>
+        </div>
+      </div>
+    <% end  %>
   </div>
 
-  <%= @campaign.publish_button %>
-  <%= link_to "Pledge", new_campaign_pledge_path(@campaign), class: "btn btn-primary" %>
-</div>
-<div class="col-md-4">
-  <% @campaign.rewards.each do |rew| %>
-    <div class="panel panel-default">
-      <div class="panel-heading"><%= number_to_currency(rew.amount) %></div>
-      <div class="panel-body">
-        <%= rew.description %>
-      </div>
-    </div>
-  <% end  %>
-</div>
 
-
-<script>
-  handler = Gmaps.build('Google');
-  handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
-  markers = handler.addMarkers([
-    {
-      "lat": <%= @campaign.latitude %>,
-      "lng": <%= @campaign.longitude %>,
-      "infowindow": "<%= @campaign.title %>"
-    }
-  ]);
-  handler.bounds.extendWith(markers);
-  handler.fitMapToBounds();
-  handler.getMap().setZoom(17);
-  });
-</script>
+  <script>
+    handler = Gmaps.build('Google');
+    handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+    markers = handler.addMarkers([
+      {
+        "lat": <%= @campaign.latitude %>,
+        "lng": <%= @campaign.longitude %>,
+        "infowindow": "<%= @campaign.title %>"
+      }
+    ]);
+    handler.bounds.extendWith(markers);
+    handler.fitMapToBounds();
+    handler.getMap().setZoom(17);
+    });
+  </script>
+<% end %>
